# spatialize

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.txt  TODO.txt  main.cpp  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-upload.yml  build_linux.yml  main.yml  release-upload.yml  test-all.yaml  test-linux.yml
Sandbox/: best_estimator_2.py  best_estimator_3.py  data.py  teting_ae.ipynb  variogram.py
contrib/: CMakeLists.txt
docs/source/: conf.py  index.rst  requirements.txt
docs/source/reference/: esi.rst  idw.rst  index.rst  lossfunction.rst
examples/: 2.-esi_grid_search_with_griddata.ipynb  grid_search_esi_griddata.ipynb  plain_egriddata.ipynb
examples/Sandbox/: best_estimator.py  test1.py  teting_ae.ipynb
examples/old_notebooks/: 2.-esi_grid_search_with_griddata.ipynb  3.-esi_custom_precision.ipynb  4.-working_with_esi_and_nongriddata.ipynb
examples/scripted_examples/: adaptive_esi_3d_nongriddata.py  adaptive_esi_griddata_and_scipy.py  adaptive_esi_nongriddata.py  custom_esi.py  custom_precision.py  esi_3d_nongriddata.py  esi_3dgriddata.py  esi_custom_precision.py  esi_grid_search.py  esi_griddata.py  esi_griddata_and_scipy.py  esi_griddata_and_scypy.py  esi_griddata_mondrian_voronoi.py  esi_nongriddata.py  ess_nongriddata.py  grid_search_2.py  griddata.py  griddata_mond_vor.py  gstools_example.py  idw_and_esi_grid_search.py  idw_grid_search.py  idw_griddata.py  nongriddata.py  pykrige_example.py  sample_analysis.py  save_and_load.py
include/spatialite/: abstract_esi.hpp  abstract_nn.hpp  esi_idw.hpp  esi_idw_anis.hpp  esi_kriging.hpp  file.hpp  kdtree.hpp  nn_idw.hpp  string.hpp  utils.hpp
include/spatialize/: abstract_esi.hpp  abstract_nn.hpp  abstract_voronoi.hpp  adaptive_esi_idw.hpp  callback.hpp  callback_logging.hpp  custom_esi.hpp  esi_idw.hpp  esi_kriging.hpp  kdtree.hpp  logging.hpp  nn_idw.hpp  utils.hpp  voronoi_idw.hpp
sandbox/: esi_voronoi_nugg0.1_0.7_10_5perc.csv  esi_voronoi_nugg0.1_0.7_1_5perc.csv  esi_voronoi_nugg0.1_0.7_20_5perc.csv  esi_voronoi_nugg0.1_0.7_2_5perc.csv  esi_voronoi_nugg0.1_0.7_50_1perc.csv  esi_voronoi_nugg0.1_0.7_50_5perc.csv  esi_voronoi_nugg0.1_0.7_50_reduced.csv  esi_voronoi_nugg0.1_0.7_5_5perc.csv  sim_data_nugg0.1_1perc.csv  sim_data_nugg0.1_5perc.csv  sim_data_nugg0.1_reduced.csv  voronoi_example.py  voronoi_original_example.py
sandbox/voronoi/: ensemble.py  geometry_transformations.py  interpolations.py  logging.py  voronoi.py
src/: spatialize.cpp
src/c++/: libspatialite.cpp  libspatialize.cpp
src/python/spatialize/: __init__.py  _math_util.py  _util.py  data.py  logging.py  result.py  viz.py
src/python/spatialize/gs/: __init__.py  idw.py
src/python/spatialize/gs/esi/: __init__.py  _main.py  aggfunc.py  aggfunction.py  lossfunction.py  precfunction.py
src/python/spatialize/gs/ess/: __init__.py  _main.py
src/python/spatialize/gs/spa/: __init__.py  _main.py  empirical.py
src/python/spatialize/resources/data/: dc1_input_data.csv  dc2_output_box.csv  sim_data_geom_anis_nugg0.1_1perc.csv  sim_data_geom_anis_nugg0.1_5perc.csv  sim_data_geom_anis_nugg0.1_reduced.csv  sim_kriging_geom_anis_nugg0.1_1perc.csv  sim_kriging_geom_anis_nugg0.1_5perc.csv  sim_kriging_geom_anis_nugg0.1_reduced.csv
test/: CMakeLists.txt  esi_test.py  grid_search.py  griddata.py  mem_profiling_test.py  test_spatialite.py  test_spatialize.py
test/scripted_examples/: custom_precision.py  grid_search.py  griddata.py  idw_grid_search.py  idw_griddata.py  nongriddata.py  plain_idw_griddata.py
test/testdata/: box.csv  grid.csv
