[project]
name = "spatialize"
dynamic = ["dependencies", "version"]
authors = [{ name = "ALGES Lab", email = "contacto@alges.cl"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Spatialize: A Python wrapper for C++ ESI library"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/alges/spatialize"

[build-system]
requires = [
    "setuptools==59.2.0",
    "wheel==0.37.0",
    "Cython>=0.29.30,<3.0",
    "numpy>= 1.8.0",
    "tqdm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


