[project]
name = "spatialize-test-reik0"
dynamic = ["dependencies", "version"]
authors = [{ name = "Reik0z", email = "contacto@alges.cl"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "Spatialize: A Python wrapper for C++ ESI library"
keywords = ['ESI ensemble spatial interpolation']
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text="MIT"}

[project.urls]
Repository = "https://github.com/Reik0z/spatialize"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy>= 1.8.0",
    "tqdm",
    "matplotlib",
    "rich",
    "pybind11[global]"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


